# leak_inductance_estimation

./: .gitignore  README.md  app.py  main.ipynb  pyproject.toml
data/: output_2_v500f_n_8.csv  output_3_v500f_n_8.csv  output_t38_n_10.csv  output_t38_n_8.csv  output_v500f_n_10_1.csv  output_v500f_n_10_2.csv  output_v500f_n_8.csv  permeabilitycurve_selected.xlsx
